--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -13,9 +13,11 @@ editor_options:
 ---
 
 ```{r setup}
-knitr::opts_knit$set(cache = TRUE,
-                     dev=c('png', 'svg', 'pdf'),
-                     fig.ext=c('png', 'svg', 'pdf'))
+knitr::opts_chunk$set(cache = TRUE,
+                      dev    = c('png', 'svg', 'pdf'),
+                      fig.ext= c('png', 'svg', 'pdf'),
+                      fig.width  = 15,
+                      fig.heigth = 15)
 ```
 
 # Introduction
@@ -57,19 +59,19 @@ makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) +
 
 Same as above, but colored by strand.
 
-```{r Oki_Osa_strand, fig.height=15, fig.width=15}
+```{r Oki_Osa_strand}
 makeOxfordPlots(gbs$Oki_Osa, diag = FALSE, col = "strand") + theme(legend.position="none")
 ```
 
 ### Oki vs Bar (distant)
 
-```{r Oki_Bar_all, fig.height=15, fig.width=15}
+```{r Oki_Bar_all}
 makeOxfordPlots(gbs$Oki_Bar, diag = FALSE, col = "strand") + theme(legend.position="none")
 ```
 
 ### Oki vs Kum (near)
 
-```{r Oki_Kum, fig.height=15, fig.width=15}
+```{r Oki_Kum}
 makeOxfordPlots(gbs$Oki_Kum, col = "strand") + theme(legend.position="none")
 ```
 
@@ -77,19 +79,19 @@ makeOxfordPlots(gbs$Oki_Kum, col = "strand") + theme(legend.position="none")
 
 ### Osa vs Oki (distant)
 
-```{r Osa_Oki, fig.height=15, fig.width=15}
+```{r Osa_Oki}
 makeOxfordPlots(gbs$Osa_Oki, diag = FALSE, col = "strand") + theme(legend.position="none")
 ```
 
 ### Osa vs Bar (intermediate)
 
-```{r Osa_bar, fig.height=15, fig.width=15}
+```{r Osa_bar}
 makeOxfordPlots(gbs$Osa_Bar, diag = FALSE, col = "strand") + theme(legend.position="none")
 ```
 
 ### Osa vs Aom (near)
 
-```{r Osa_Aom, fig.height=15, fig.width=15}
+```{r Osa_Aom}
 makeOxfordPlots(gbs$Osa_Aom, col = "strand") + theme(legend.position="none")
 ```
 
@@ -97,13 +99,13 @@ makeOxfordPlots(gbs$Osa_Aom, col = "strand") + theme(legend.position="none")
 
 ### Bar vs Oki (distant)
 
-```{r Bar_Oki, fig.height=15, fig.width=15}
+```{r Bar_Oki}
 makeOxfordPlots(gbs$Bar_Oki, diag = FALSE, col = "strand") + theme(legend.position="none")
 ```
 
 ### Bar vs Osa (intermediate)
 
-```{r Bar_Osa, fig.height=15, fig.width=15}
+```{r Bar_Osa}
 makeOxfordPlots(gbs$Bar_Osa, diag = FALSE, col = "strand") + theme(legend.position="none")
 ```
 
@@ -116,7 +118,7 @@ two genomes, because most contigs of the Bergen assembly are too short.
 Alignment on the diagonal only demonstrates collinearity _within_ a contig,
 not _between_.**
 
-```{r Bar_Nor, fig.height=15, fig.width=15}
+```{r Bar_Nor}
 makeOxfordPlots(gbs$Bar_Nor, col = "strand") + theme(legend.position="none")
 ```
 
@@ -124,19 +126,19 @@ makeOxfordPlots(gbs$Bar_Nor, col = "strand") + theme(legend.position="none")
 
 ## _Ciona intestinalis_ Plymouth vs Roscoff (near)
 
-```{r Ply_Ros, fig.height=15, fig.width=15}
+```{r Ply_Ros}
 makeOxfordPlots(gbs$Ply_Ros, col = "strand") + theme(legend.position="none") + ggtitle("Ciona intestinalis Plymouth vs Roscoff")
 ```
 
 ## _Ciona intestinalis_ Plymouth vs _Ciona robusta_ (intermediate)
 
-```{r Ply_Rob, fig.height=15, fig.width=15}
+```{r Ply_Rob}
 makeOxfordPlots(gbs$Ply_Rob, col = "strand") + theme(legend.position="none") + ggtitle("Ciona intestinalis Plymouth vs Ciona robusta")
 ```
 
 ## _Ciona intestinalis_ Plymouth vs _Ciona savignyi_ (distant)
 
-```{r Ply_Sav, fig.height=15, fig.width=15}
+```{r Ply_Sav}
 makeOxfordPlots(gbs$Ply_Sav, col = "strand") + theme(legend.position="none") + ggtitle("Ciona intestinalis Plymouth vs Ciona savignyi")
 ```
 
@@ -144,25 +146,25 @@ makeOxfordPlots(gbs$Ply_Sav, col = "strand") + theme(legend.position="none") + g
 
 ## vs Drosophila mauritania (near)
 
-```{r Dmel_Dmau, fig.height=15, fig.width=15}
+```{r Dmel_Dmau}
 makeOxfordPlots(gbs$Dme_Dma, col = "strand") + theme(legend.position="none") + ggtitle("Dmel vs Dmau")
 ```
 
 ## vs Drosophila yakuba (intermediate)
 
-```{r Dmel_Dyak, fig.height=15, fig.width=15}
+```{r Dmel_Dyak}
 makeOxfordPlots(gbs$Dme_Dya, col = "strand") + theme(legend.position="none") + ggtitle("Dmel vs Dyak")
 ```
 
 ## vs Drosophila subpulchrella (intermediate)
 
-```{r Dmel_Dsub, fig.height=15, fig.width=15}
+```{r Dmel_Dsub}
 makeOxfordPlots(gbs$Dme_Dsu, col = "strand") + theme(legend.position="none") + ggtitle("Dmel vs Dsub")
 ```
 
 ## vs Drosophila buskii (distant)
 
-```{r Dmel_Dbus, fig.height=15, fig.width=15}
+```{r Dmel_Dbus}
 makeOxfordPlots(gbs$Dme_Dbu, col = "strand") + theme(legend.position="none") + ggtitle("Dmel vs Dbus")
 ```
 
@@ -170,31 +172,31 @@ makeOxfordPlots(gbs$Dme_Dbu, col = "strand") + theme(legend.position="none") + g
 
 ## C. briggsae vs C. nigoni (near)
 
-```{r Cbr_Cni, fig.height=15, fig.width=15}
+```{r Cbr_Cni}
 makeOxfordPlots(gbs$Cbr_Cni, col = "strand") + theme(legend.position="none") + ggtitle("C. briggsae vs C. nigoni")
 ```
 
 ## C. briggsae vs C. remanei (intermediate)
 
-```{r Cbr_Cre, fig.height=15, fig.width=15}
+```{r Cbr_Cre}
 makeOxfordPlots(gbs$Cbr_Cre, col = "strand") + theme(legend.position="none") + ggtitle("C. briggsae vs C. remanei")
 ```
 
 ## C. nigoni vs C. remanei (intermediate)
 
-```{r Cni_Cre, fig.height=15, fig.width=15}
+```{r Cni_Cre}
 makeOxfordPlots(gbs$Cni_Cre, col = "strand") + theme(legend.position="none") + ggtitle("C. nigoni vs C. remanei")
 ```
 
 ## C. briggsae vs C. elegans (distant)
 
-```{r Cbr_Cel, fig.height=15, fig.width=15}
+```{r Cbr_Cel}
 makeOxfordPlots(gbs$Cbr_Cel, col = "strand") + theme(legend.position="none") + ggtitle("C. briggsae vs C. elegans")
 ```
 
 ## C. nigoni vs C. inopinata (distant)
 
-```{r Cni_Cin, fig.height=15, fig.width=15}
+```{r Cni_Cin}
 makeOxfordPlots(gbs$Cni_Cin, col = "strand") + theme(legend.position="none") + ggtitle("C. nigoni vs C. inopinata")
 ```
 
@@ -209,14 +211,14 @@ otherwise the window out of target.
 Note that each of these chromosomes is longer than any _Oikopleura dioica_
 genome.
 
-```{r hg38_mm10, fig.height=15, fig.width=15}
+```{r hg38_mm10}
 hgmm <- load_genomic_breaks(system.file(("extdata/hg38_mm10/hg38_chr18__mm10_chr18.gff3"), package = "BreakpointsData"))
 makeOxfordPlots(hgmm, col = "strand") + ggtitle("Homo sapiens vs Mus musculus")
 ```
 
 ## Muntjaks
 
-```{r Mmun_Mree, fig.height=15, fig.width=15}
+```{r Mmun_Mree}
 Mmun_Mree <- load_genomic_breaks(system.file("extdata/Muntjaks/Rrev_Rmun.07.postmasked.gff.gz", package = "BreakpointsData"), type = "match")
 makeOxfordPlots(Mmun_Mree |> swap(), col = "strand") + ggtitle("Muntiacus reevesi vs Muntiacus muntjak")
 ```
