--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(cache = TRUE,
                       dev    = c('png', 'svg', 'pdf'),
                       fig.ext= c('png', 'svg', 'pdf'),
                       fig.width  = 15,
-                      fig.heigth = 15)
+                      fig.height = 15)
 ```
 
 # Introduction
