Scaffolding Kume and 5-way plot

--- a/vignettes/AomScaffolding.Rmd
+++ b/vignettes/AomScaffolding.Rmd
@@ -7,7 +7,7 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
-  %\VignetteIndexEntry{Alignment line plots, whole genomes}
+  %\VignetteIndexEntry{Scaffolding of the AOM-5 genome}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
