--- a/vignettes/CNEs.Rmd
+++ b/vignettes/CNEs.Rmd
@@ -66,8 +66,30 @@ axt$Oki_Oal <- readAxt_("OKI2018_I69_1.0__O_alb.axt.gz",        "BSgenome.Oidioi
 axt$Osa_Oki <- readAxt_("OSKA2016v1.9__OKI2018_I69_1.0.axt.gz", "BSgenome.Oidioi.OIST.OSKA2016v1.9", "BSgenome.Oidioi.OIST.OKI2018.I69")
 axt$Osa_Bar <- readAxt_("OSKA2016v1.9__Bar2_p4.axt.gz",         "BSgenome.Oidioi.OIST.OSKA2016v1.9", "BSgenome.Oidioi.OIST.Bar2.p4")
 axt$Osa_Aom <- readAxt_("OSKA2016v1.9__AOM-5-5f.axt.gz",        "BSgenome.Oidioi.OIST.OSKA2016v1.9", "BSgenome.Oidioi.OIST.AOM.5.5f")
+axt$Osa_Nor <- readAxt_("OSKA2016v1.9__OdB3.axt.gz",         "BSgenome.Oidioi.OIST.OSKA2016v1.9", "BSgenome.Oidioi.genoscope.OdB3")
+axt$Osa_Kum <- readAxt_("OSKA2016v1.9__KUM-M3-7f.axt.gz", "BSgenome.Oidioi.OIST.OSKA2016v1.9", "BSgenome.Oidioi.OIST.KUM.M3.7f")
+axt$Oki_Olo <- readAxt_("OSKA2016v1.9__O_lon.axt.gz",        "BSgenome.Oidioi.OIST.OSKA2016v1.9")
+axt$Oki_Ova <- readAxt_("OSKA2016v1.9__O_van.axt.gz",        "BSgenome.Oidioi.OIST.OSKA2016v1.9")
+axt$Oki_Oal <- readAxt_("OSKA2016v1.9__O_alb.axt.gz",        "BSgenome.Oidioi.OIST.OSKA2016v1.9")
 
 axt$Bar_Oki <- readAxt_("Bar2_p4__OKI2018_I69_1.0.axt.gz",      "BSgenome.Oidioi.OIST.Bar2.p4",      "BSgenome.Oidioi.OIST.OKI2018.I69")
+axt$Bar_Osa <- readAxt_("Bar2_p4__OSKA2016v1.9.axt.gz",      "BSgenome.Oidioi.OIST.Bar2.p4",      "BSgenome.Oidioi.OIST.OSKA2016v1.9")
+axt$Bar_Nor <- readAxt_("Bar2_p4__OdB3.axt.gz",      "BSgenome.Oidioi.OIST.Bar2.p4",      "BSgenome.Oidioi.genoscope.OdB3")
+axt$Bar_Kum <- readAxt_("Bar2_p4__KUM-M3-7f.axt.gz", "BSgenome.Oidioi.OIST.Bar2.p4", "BSgenome.Oidioi.OIST.KUM.M3.7f")
+axt$Bar_Aom <- readAxt_("Bar2_p4__AOM-5-5f.axt.gz", "BSgenome.Oidioi.OIST.Bar2.p4", "BSgenome.Oidioi.OIST.AOM.5.5f")
+axt$Bar_Olo <- readAxt_("Bar2_p4__O_lon.axt.gz",        "BSgenome.Oidioi.OIST.Bar2.p4")
+axt$Bar_Ova <- readAxt_("Bar2_p4__O_van.axt.gz",        "BSgenome.Oidioi.OIST.Bar2.p4")
+axt$Bar_Oal <- readAxt_("Bar2_p4__O_alb.axt.gz",        "BSgenome.Oidioi.OIST.Bar2.p4")
+
+axt$Nor_Oki <- readAxt_("OdB3__OKI2018_I69_1.0.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.OKI2018.I69")
+axt$Nor_Osa <- readAxt_("OdB3__OSKA2016v1.9.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.OSKA2016v1.9")
+axt$Nor_Bar <- readAxt_("OdB3__Bar2_p4.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.Bar2.p4")
+axt$Nor_Kum <- readAxt_("OdB3__KUM-M3-7f.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.KUM.M3.7f")
+axt$Nor_Aom <- readAxt_("OdB3__AOM-5-5f.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.AOM.5.5f")
+axt$Nor_Olo <- readAxt_("OdB3__O_lon.axt.gz", "BSgenome.Oidioi.genoscope.OdB3")
+axt$Nor_Ova <- readAxt_("OdB3__O_van.axt.gz", "BSgenome.Oidioi.genoscope.OdB3")
+axt$Nor_Oal <- readAxt_("OdB3__O_alb.axt.gz", "BSgenome.Oidioi.genoscope.OdB3")
+
 ```
 
 ```{r compute_CNEs}
@@ -106,7 +128,10 @@ calculateCEs <- function(window, identity) {
   ce$Osa_Oki <- ceScan_to_GB(axt$Osa_Oki, window = window, identity = identity)
   ce$Osa_Bar <- ceScan_to_GB(axt$Osa_Bar, window = window, identity = identity)
   ce$Osa_Aom <- ceScan_to_GB(axt$Osa_Aom, window = window, identity = identity)
+  ce$Osa_Nor <- ceScan_to_GB(axt$Osa_Nor, window = window, identity = identity)
   ce$Bar_Oki <- ceScan_to_GB(axt$Bar_Oki, window = window, identity = identity)
+  ce$Bar_Osa <- ceScan_to_GB(axt$Bar_Osa, window = window, identity = identity)
+  ce$Bar_Nor <- ceScan_to_GB(axt$Bar_Nor, window = window, identity = identity)
   ce
 }
 
