--- a/vignettes/CNEs.Rmd
+++ b/vignettes/CNEs.Rmd
@@ -81,15 +81,6 @@ axt$Bar_Olo <- readAxt_("Bar2_p4__O_lon.axt.gz",        "BSgenome.Oidioi.OIST.Ba
 axt$Bar_Ova <- readAxt_("Bar2_p4__O_van.axt.gz",        "BSgenome.Oidioi.OIST.Bar2.p4")
 axt$Bar_Oal <- readAxt_("Bar2_p4__O_alb.axt.gz",        "BSgenome.Oidioi.OIST.Bar2.p4")
 
-axt$Nor_Oki <- readAxt_("OdB3__OKI2018_I69_1.0.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.OKI2018.I69")
-axt$Nor_Osa <- readAxt_("OdB3__OSKA2016v1.9.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.OSKA2016v1.9")
-axt$Nor_Bar <- readAxt_("OdB3__Bar2_p4.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.Bar2.p4")
-axt$Nor_Kum <- readAxt_("OdB3__KUM-M3-7f.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.KUM.M3.7f")
-axt$Nor_Aom <- readAxt_("OdB3__AOM-5-5f.axt.gz", "BSgenome.Oidioi.genoscope.OdB3", "BSgenome.Oidioi.OIST.AOM.5.5f")
-axt$Nor_Olo <- readAxt_("OdB3__O_lon.axt.gz", "BSgenome.Oidioi.genoscope.OdB3")
-axt$Nor_Ova <- readAxt_("OdB3__O_van.axt.gz", "BSgenome.Oidioi.genoscope.OdB3")
-axt$Nor_Oal <- readAxt_("OdB3__O_alb.axt.gz", "BSgenome.Oidioi.genoscope.OdB3")
-
 ```
 
 ```{r compute_CNEs}
@@ -129,9 +120,18 @@ calculateCEs <- function(window, identity) {
   ce$Osa_Bar <- ceScan_to_GB(axt$Osa_Bar, window = window, identity = identity)
   ce$Osa_Aom <- ceScan_to_GB(axt$Osa_Aom, window = window, identity = identity)
   ce$Osa_Nor <- ceScan_to_GB(axt$Osa_Nor, window = window, identity = identity)
+  ce$Osa_Kum <- ceScan_to_GB(axt$Osa_Kum, window = window, identity = identity)
+  ce$Osa_Olo <- ceScan_to_GB(axt$Osa_Olo, window = window, identity = identity)
+  ce$Osa_Ova <- ceScan_to_GB(axt$Osa_Ova, window = window, identity = identity)
+  ce$Osa_Oal <- ceScan_to_GB(axt$Osa_Oal, window = window, identity = identity)
   ce$Bar_Oki <- ceScan_to_GB(axt$Bar_Oki, window = window, identity = identity)
   ce$Bar_Osa <- ceScan_to_GB(axt$Bar_Osa, window = window, identity = identity)
   ce$Bar_Nor <- ceScan_to_GB(axt$Bar_Nor, window = window, identity = identity)
+  ce$Bar_Kum <- ceScan_to_GB(axt$Bar_Kum, window = window, identity = identity)
+  ce$Bar_Aom <- ceScan_to_GB(axt$Bar_Aom, window = window, identity = identity)
+  ce$Bar_Olo <- ceScan_to_GB(axt$Bar_Olo, window = window, identity = identity)
+  ce$Bar_Ova <- ceScan_to_GB(axt$Bar_Ova, window = window, identity = identity)
+  ce$Bar_Oal <- ceScan_to_GB(axt$Bar_Oal, window = window, identity = identity)
   ce
 }
 
