set bw theme at the outset

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -25,6 +25,8 @@ library('OikScrambling')   |> suppressPackageStartupMessages()
 library('patchwork')       |> suppressPackageStartupMessages()
 genomes <- OikScrambling:::loadAllGenomes(compat = F)
 transcripts <- OikScrambling:::loadAllTranscriptsGR(compat = F) |> suppressWarnings()
+ggplot2::theme_set(theme_bw())
+
 load("BreakPoints.Rdata")
 ```
 
